<resources>
    <string name="app_name">Flicker Image Search</string>
    <string name="app_icon">App Icon</string>
    <string name="search_images">Search Images</string>
    <string name="saved_images">Saved Images</string>
    <string name="image_view">Image View</string>
    <string name="save">Save</string>
    <string name="enter_search_keyword">Enter search keyword</string>
    <string name="somthing_went_wrong">Something went wrong.</string>
    <string name="photo_arg">PhotoArg</string>
    <string name="retry">Retry</string>
    <string name="delete_photo">Delete photo</string>
    <string name="back_button">Back Button</string>
</resources>